# django-rss-filter

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
example/: justfile
example/config/: settings.py
rssfilter/: models.py  utils.py
